--- a/website/index.html
+++ b/website/index.html
@@ -33,10 +33,10 @@
                 </h1>
                 <h1 class="name">
 
-                    A Cloud Engineer.
+                    Software Engineer.
                 </h1>
                 <p>
-                    "I'm a aspiring Cloud Engineer passionate about building scalable, secure, and efficient cloud solutions. 
+                    "I'm a aspiring Software Engineer passionate about building scalable, secure, and efficient cloud solutions. 
                     From architecting seamless infrastructures to automating deployments, I thrive on optimizing the cloud to deliver efficiency and innovation."
                 </p>
                 <div class="btn-con">
@@ -518,3 +518,4 @@
     <script src="src/app.js"></script>
 </body>
 </html>
+
